--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,30 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">E-Shop</a>
+      <a class="navbar-brand" href="">E-Shop</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Store</a>
+            <a class="nav-link active" aria-current="page" routerLink="">Store</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Admin Dashboard</a>
+            <a class="nav-link" routerLink="/admin/dashboard">Admin Dashboard</a>
           </li>
         </ul>
         <ul class="navbar-nav my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            <a class="nav-link active" aria-current="page" routerLink="/orders">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Cart</a>
+            <a class="nav-link active" aria-current="page" routerLink="/cart">Cart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Login</a>
+            <a class="nav-link active" aria-current="page" routerLink="/login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Logout</a>
+            <a class="nav-link" href="javascript:void(0);">Logout</a>
           </li>
         </ul>
         
