--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,6 +26,9 @@
           <li class="nav-item">
             <a class="nav-link" href="javascript:void(0);">Logout</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/signup">Signup</a>
+          </li>
         </ul>
         
       </div>
