--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,19 +1,19 @@
 <div class="text-center mt-4">
-    <form class="form-signin border rounded">
+    <form class="form-signin border rounded" (submit)="signup($event)">
 
         <img class="mb-4" src="assets/cart.png" alt="" width="72" height="72">
        
         <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
         <label for="inputName" class="sr-only">Name</label>
-        <input type="text" id="inputName" class="form-control" placeholder="Enter your name" required autofocus>
+        <input type="text" id="inputName" class="form-control" placeholder="Enter your name" name="name" required autofocus>
         <br>
 
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Enter your email address" required>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Enter your email address" name="email" required>
         <br>
 
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password" required>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password" name="password" required>
         <br>
         
         <label for="inputContact" class="sr-only">Contact</label>
