--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -4,18 +4,30 @@
         <img class="mb-4" src="assets/cart.png" alt="" width="72" height="72">
        
         <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+        
+        <div *ngIf='error' class="alert alert-danger" role="alert">
+          {{error}}
+        </div>
+        <div *ngIf='success' class="alert alert-success" role="alert">
+          {{success}}
+        </div>
+
+        <!--name-->
         <label for="inputName" class="sr-only">Name</label>
         <input type="text" id="inputName" class="form-control" placeholder="Enter your name" name="name" required autofocus>
         <br>
 
+        <!--email-->
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Enter your email address" name="email" required>
         <br>
 
+        <!--pasword-->
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Enter your password" name="password" required>
         <br>
         
+        <!--phone-->
         <label for="inputContact" class="sr-only">Contact</label>
         <input type="number" id="inputContact" class="form-control" placeholder="Enter your contact" name="phone" required>
         <br>
